--- a/info.plist
+++ b/info.plist
@@ -75,6 +75,9 @@
 		<string>8862CA6B-5184-4DE7-9BD5-817FD0944B63</string>
 		<string>5F609CC0-CC8A-48F8-86C0-2D875596F8E4</string>
 		<string>BD5F1C2D-2FE3-438A-9539-A1470712FA9F</string>
+		<string>0EC0F636-4E03-406A-89E8-E22D9C874EAB</string>
+		<string>6D6CE739-654B-40B7-8C07-8F28D8223309</string>
+		<string>F21D5C09-3522-4245-90E1-FE089D900F9F</string>
 	</array>
 	<key>uuid</key>
 	<string>B39DAF27-2819-49EA-A080-F4EAE1AB6DC1</string>
