Updating pyrat bundle

--- a/info.plist
+++ b/info.plist
@@ -78,6 +78,11 @@
 		<string>0EC0F636-4E03-406A-89E8-E22D9C874EAB</string>
 		<string>6D6CE739-654B-40B7-8C07-8F28D8223309</string>
 		<string>F21D5C09-3522-4245-90E1-FE089D900F9F</string>
+		<string>31361890-1B88-401D-924C-53AA78764001</string>
+		<string>C121F9E5-66BC-47D4-9AE2-56EE046841E9</string>
+		<string>AE4C78E9-4F05-438E-935B-57348B2F2606</string>
+		<string>FB56C42A-2126-44BA-A0B0-21E1C4E807AC</string>
+		<string>43BA28FC-2133-43B9-9E35-1D63D0185321</string>
 	</array>
 	<key>uuid</key>
 	<string>B39DAF27-2819-49EA-A080-F4EAE1AB6DC1</string>
