Adding some nice new functions

--- a/info.plist
+++ b/info.plist
@@ -81,8 +81,12 @@
 		<string>31361890-1B88-401D-924C-53AA78764001</string>
 		<string>C121F9E5-66BC-47D4-9AE2-56EE046841E9</string>
 		<string>AE4C78E9-4F05-438E-935B-57348B2F2606</string>
+		<string>C3E314BC-9B17-404F-87D2-5D4869F432D5</string>
 		<string>FB56C42A-2126-44BA-A0B0-21E1C4E807AC</string>
 		<string>43BA28FC-2133-43B9-9E35-1D63D0185321</string>
+		<string>3980C4B7-A4E3-44A6-BDBA-A9D3AA4E23F8</string>
+		<string>83652224-E993-4A17-9729-545FB78E9E49</string>
+		<string>69F7F25C-B23E-4D7E-9A85-04C483879C9D</string>
 	</array>
 	<key>uuid</key>
 	<string>B39DAF27-2819-49EA-A080-F4EAE1AB6DC1</string>
